<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>jasper</groupId>
	<artifactId>jasper-load-testing</artifactId>
	<version>1.3.0-SNAPSHOT</version>
	<name>jasper-load-testing</name>
	<description>Load testing for Jasper application using Gatling</description>

	<properties>
		<java.version>21</java.version>
		<maven.compiler.source>${java.version}</maven.compiler.source>
		<maven.compiler.target>${java.version}</maven.compiler.target>
		<maven.compiler.release>${java.version}</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<gatling-maven-plugin.version>4.20.4</gatling-maven-plugin.version>
		<gatling.version>3.14.4</gatling.version>
	</properties>

	<dependencies>
		<dependency>
			<groupId>io.gatling.highcharts</groupId>
			<artifactId>gatling-charts-highcharts</artifactId>
			<version>${gatling.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.14.0</version>
				<configuration>
					<parameters>true</parameters>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<release>${java.version}</release>
				</configuration>
			</plugin>
			<plugin>
				<groupId>io.gatling</groupId>
				<artifactId>gatling-maven-plugin</artifactId>
				<version>${gatling-maven-plugin.version}</version>
				<configuration>
					<jvmArgs>
						<jvmArg>--add-opens=java.base/java.lang=ALL-UNNAMED</jvmArg>
					</jvmArgs>
					<runMultipleSimulations>true</runMultipleSimulations>
					<includes>
						<include>simulations.jasper.*Simulation</include>
					</includes>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>